# AruppiProject

./: README.md
Final Project/Aruppi/: Makefile  README.md  backend.Dockerfile  config.py  docker-compose.yml  pyproject.toml  requirements.txt
Final Project/Aruppi/aruppi_project/: __init__.py  main.py
Final Project/Aruppi/aruppi_project/anime_subsystem/: __init__.py  add_content.py  add_content_strategy.py  anime.py  anime_dao.py  anime_facade.py  anime_types.py  episode_state.py  get_content.py  get_content_strategy.py
Final Project/Aruppi/aruppi_project/config/: .env  __init__.py  database.py
Final Project/Aruppi/aruppi_project/core_subsystem/: __init__.py  user_authentication.py
Final Project/Aruppi/aruppi_project/news_subsystem/: __init__.py  news.py  news_dao.py  news_facade.py
Final Project/Aruppi/aruppi_project/radio_subsystem/: __init__.py  radio.py  radio_dao.py  radio_facade.py  radio_state.py
Final Project/Aruppi/aruppi_project/user_profile_subsystem/: __init__.py  collection.py  collection_strategy.py  user.py
Final Project/Aruppi/backend/: main.py
Final Project/Aruppi/backend/anime_subsystem/: __init__.py  anime.py  anime_dao.py  anime_facade.py  anime_types.py  anyme_types.py  episode_state.py
Final Project/Aruppi/backend/config/: .env  db.py
Final Project/Aruppi/backend/core_subsystem/: anime_proxy.py
Final Project/Aruppi/backend/japanese_culture_subsystem/: __init__.py
Final Project/Aruppi/backend/news_subsystem/: __init__.py  news.py  news_dao.py  news_facade.py
Final Project/Aruppi/backend/radio_subsystem/: __init__.py  (+4 more)
(+11 files in other folders)
