[tool.poetry]
name = "backend"
version = "0.1.0"
description = "This is an application of Japanese Culture, called Aruppi."
authors = ["xsarias <xsariasa@udistrital.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.29"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.4.2"
pylint = "^3.1.0"
dill = "^0.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli_script = "backend.main:main"
